@@ -10,4 +10,4 @@ package-name = Products.TinyMCE
 
 [versions]
 Products.PrintingMailHost = 0.7
-
+Products.TinyMCE =
